vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_ident_or_block_selector.vv
import v.embed_file

fn main() {
	maybe := ?embed_file.EmbedFileData(none)
	'' == (maybe or { $embed_file(@FILE) }).path
}
